--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
-!<!DOCTYPE html>
-   <html> 
-
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-    </head>
-
-    <body>
-        Starter page content
-    </body>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Magical Shopping Cart</title>
+    <link rel="stylesheet" href="shoppingCart.css">
+</head>
+<body>
+    <h1>Welcome to the Magic Shop</h1>
+    <div id="productList"></div>
+    <h2>Your Cart</h2>
+    <ul id="cartList"></ul>
+    <script src="shoppingCart.js"></script>
+</body>
 </html>
