--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 </head>
 <body>
     <h1>Welcome to the Magic Shop</h1>
+
+    <img width='200' src="image1.jpg" alt="
     <div id="productList"></div>
     <h2>Your Cart</h2>
     <ul id="cartList"></ul>
